# django-ltree-2

./: .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  CONTRIBUTORS  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: CI.yml  publish.yml  test.yml
django_ltree/: apps.py  checks.py  fields.py  functions.py  lookups.py  managers.py  models.py  paths.py  querysets.py
docs/: conf.py  index.rst  indexes.md  installation.md  installation.rst  lookups.md  manager.md  manager.rst  usage.md  usage.rst
src/django_ltree/: fields.py  managers.py
tests/: conftest.py  test_label_generation.py  test_limits.py  test_lookups.py  test_model.py  test_path_creation.py  test_path_field.py  test_path_value.py
tests/taxonomy/: models.py
tests/taxonomy/migrations/: 0001_initial.py
